# slang-bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
.github/workflows/: bazel.yml
bazel/: version_info.bzl
include/: BUILD.bazel
scripts/: BUILD.bazel
source/: BUILD.bazel
source/ast/: BUILD.bazel
tests/unittests/: BUILD.bazel
tools/: BUILD.bazel
tools/driver/: BUILD.bazel
tools/hier/: BUILD.bazel
tools/netlist/: BUILD.bazel
tools/netlist/tests/: BUILD.bazel
tools/reflect/: BUILD.bazel
tools/rewriter/: BUILD.bazel
tools/threadtest/: BUILD.bazel
tools/tidy/: BUILD.bazel
tools/tidy/tests/: BUILD.bazel
