load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

#################################################
# Build Configuration Settings
# All settings can be controlled via .bazelrc
# See .bazelrc for available configurations
#################################################

config_setting(
    name = "use_mimalloc",
    values = {"define": "SLANG_USE_MIMALLOC=1"},
)

config_setting(
    name = "use_cpptrace",
    values = {"define": "SLANG_USE_CPPTRACE=1"},
)

config_setting(
    name = "include_pylib",
    values = {"define": "SLANG_INCLUDE_PYLIB=1"},
)

config_setting(
    name = "fuzz_target",
    values = {"define": "SLANG_FUZZ_TARGET=1"},
)

config_setting(
    name = "include_threadtest",
    values = {"define": "SLANG_INCLUDE_THREADTEST=1"},
)

config_setting(
    name = "build_shared",
    values = {"define": "BUILD_SHARED_LIBS=1"},
)

#################################################
# Main Library Alias
#################################################

alias(
    name = "slang",
    actual = "//source:slang_core",
    visibility = ["//visibility:public"],
)

#################################################
# Python Bindings
#################################################

py_library(
    name = "pyslang",
    srcs = glob(
        ["bindings/**/*.py"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//source:slang_core",
    ],
)
