"""
Module definition for the Slang project.
"""

module(
    name = "slang",
    version = "8.0.0",
    compatibility_level = 1,
)

# Core build dependencies
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")

# Testing dependencies
bazel_dep(name = "rules_testing", version = "0.0.4")
bazel_dep(name = "catch2", version = "3.8.0")

# Python binding dependencies
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

# External libraries
bazel_dep(name = "fmt", version = "11.1.3")

# Local external modules
bazel_dep(name = "external", version = "0.0.0")
local_path_override(
    module_name = "external",
    path = "external",
)
