load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

# Common test utilities needed by other test targets
cc_library(
    name = "test_utils",
    srcs = [
        "Test.cpp",
    ],
    hdrs = [
        "Test.h",
    ],
    includes = ["."],
    deps = [
        "//:slang",
        "@catch2",
    ],
)
