load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "slang_driver",
    srcs = ["slang_main.cpp"],
    copts = [
        # Only keep non-standard flags, others are in .bazelrc
    ] + select({
        "//:fuzz_target": [
            "-fsanitize=fuzzer",
            "-DFUZZ_TARGET",
        ],
        "//conditions:default": [],
    }),
    linkopts = select({
        "//:fuzz_target": ["-fsanitize=fuzzer"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//:slang",
        "//third_party:external_headers",
    ],
)
