load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "slang_netlist",
    srcs = [
        "netlist.cpp",
        "source/CombLoops.cpp",
        "source/Netlist.cpp",
    ] + glob([
        "include/*.h",
        "include/*.hpp",
        "include/visitors/*.h",
        "include/visitors/*.hpp",
    ]),
    includes = [
        ".",
        "include",
        "include/visitors",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:slang",
        "//third_party:external_headers",
    ],
)
