load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "netlist_lib",
    srcs = [
        "source/CombLoops.cpp",
        "source/Netlist.cpp",
    ],
    hdrs = glob([
        "include/*.h",
        "include/*.hpp",
        "include/visitors/*.h",
        "include/visitors/*.hpp",
    ]),
    includes = [
        ".",
        "include",
        "include/visitors",
    ],
    visibility = [
        "//tools/netlist/tests:__pkg__",  # Make visible to tests
    ],
    deps = [
        "//:slang",
        "//third_party:external_headers",
    ],
)

cc_binary(
    name = "slang_netlist",
    srcs = ["netlist.cpp"],
    visibility = ["//visibility:public"],
    deps = [":netlist_lib"],
)
