load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "slang_threadtest",
    srcs = [
        "threadtest.cpp",
    ] + select({
        "@platforms//os:windows": ["//scripts:win32.manifest"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//:slang",
        "//third_party:external_headers",
    ],
)
