load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "slang_tidy_lib",
    srcs = [
        "src/ASTHelperVisitors.cpp",
        "src/TidyConfig.cpp",
        "src/TidyConfigParser.cpp",
        "src/style/AlwaysCombNamed.cpp",
        "src/style/AlwaysCombNonBlocking.cpp",
        "src/style/AlwaysFFBlocking.cpp",
        "src/style/EnforceModuleInstantiationPrefix.cpp",
        "src/style/EnforcePortSuffix.cpp",
        "src/style/GenerateNamed.cpp",
        "src/style/NoDotStarInPortConnection.cpp",
        "src/style/NoDotVarInPortConnection.cpp",
        "src/style/NoImplicitPortNameInPortConnection.cpp",
        "src/style/NoLegacyGenerate.cpp",
        "src/style/NoOldAlwaysSyntax.cpp",
        "src/style/OnlyANSIPortDecl.cpp",
        "src/synthesis/AlwaysFFAssignmentOutsideConditional.cpp",
        "src/synthesis/CastSignedIndex.cpp",
        "src/synthesis/NoLatchesOnDesign.cpp",
        "src/synthesis/OnlyAssignedOnReset.cpp",
        "src/synthesis/RegisterHasNoReset.cpp",
        "src/synthesis/UnusedSensitiveSignal.cpp",
        "src/synthesis/XilinxDoNotCareValues.cpp",
    ],
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//:slang",
        "//third_party:external_headers",
    ],
    alwayslink = 1,
)

cc_binary(
    name = "slang_tidy",
    srcs = ["src/tidy.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":slang_tidy_lib",
    ],
)
