load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "netlist_unittests",
    srcs = [
        "//tests/unittests:Test.cpp",
        "//tests/unittests:Test.h",
        "//tools/netlist/source:Netlist.cpp",
        "//tools/netlist/source:CombLoops.cpp",
        "CombLoopsTests.cpp",
        "DepthFirstSearchTests.cpp",
        "DirectedGraphTests.cpp",
        "NameTests.cpp",
        "PathTests.cpp",
        "SplitTests.cpp",
        "VariableSelectorsTests.cpp",
    ],
    deps = [
        "//:slang_core",
        "@catch2//:catch2_main",
    ],
    includes = [
        "../include",
        "../../../tests/unittests",
    ],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-DUNITTESTS",
    ],
)
