load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "netlist_unittests",
    srcs = [
        "CombLoopsTests.cpp",
        "DepthFirstSearchTests.cpp",
        "DirectedGraphTests.cpp",
        "NameTests.cpp",
        "NetlistTest.h",
        "PathTests.cpp",
        "SplitTests.cpp",
        "VariableSelectorsTests.cpp",
    ],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-DUNITTESTS",
    ],
    includes = [
        ".",
        "../include",
    ],
    deps = [
        "//source:slang_core",
        "//tests/unittests:test_utils",
        "//tools/netlist:netlist_lib",
        "@catch2//:catch2_main",
    ],
)
