load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "tidy_unittests",
    timeout = "moderate",
    srcs = [
        "AlwaysCombNamedTest.cpp",
        "AlwaysCombNonBlockingTest.cpp",
        "AlwaysFFAssignmentOutsideConditionalTest.cpp",
        "AlwaysFFBlockingTest.cpp",
        "CastSignedIndexTest.cpp",
        "EnforceModuleInstantiationTest.cpp",
        "EnforcePortSuffixTest.cpp",
        "GenerateNamedTest.cpp",
        "NoDotStarInPortConnectionTest.cpp",
        "NoDotVarInPortConnectionTest.cpp",
        "NoImplicitPortNameInPortConnectionTest.cpp",
        "NoLatchesOnDesignTest.cpp",
        "NoLegacyGenerateTest.cpp",
        "NoOldAlwaysSyntaxTest.cpp",
        "OnlyANSIPortDecl.cpp",
        "OnlyAssignedOnResetTest.cpp",
        "RegisterHasNoResetTest.cpp",
        "TidyConfigParserTest.cpp",
        "UnusedSensitiveSignalTest.cpp",
        "XilinxDoNotCareValuesTest.cpp",
    ],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-DUNITTESTS",
        "-DSLANG_BOOST_SINGLE_HEADER",
    ],
    linkstatic = 1,
    deps = [
        "//:slang",
        "//:slang_external",
        "//tests/unittests:test_utils",
        "//tools/tidy:slang_tidy_lib",
        "@catch2//:catch2_main",
        "@fmt",
    ],
)
